# vscode-copilot-playwright

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  test_example.py  tsconfig.json
.github/: copilot-instructions.md
src/: __init__.py  auto_vscode_copilot.py  example.py  example.ts  vscode-tool.ts  vscode_tool.py
src/config/: playwright.config.py
tests/: example.test.js  example_test.py  test_example.py
