[project]
name = "vscode-copilot-playwright"
version = "0.1.0"
description = "Automate VS Code desktop with Playwright and Copilot chat integration."
authors = [
    { name = "ejschwartz" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.0.0",
    "requests>=2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
